--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "license": "MIT",
   "dependencies": {
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.11.15"
   },
   "devDependencies": {
     "eslint": "^7.19.0",
